# ClaudeCoworkGuard

./: .gitguardian.yml  .gitignore  LICENSE  README (11).md  README.md  checker.sh  dashboard.html  domains.json  install.sh  manifest.json  proxy.py  scanner.py  server.py  skill_scanner.py  start.sh  stop.sh
.devcontainer/: Dockerfile
chrome-extension/: background.js  content.js  manifest.json  popup.html
docs/: PRIVACY.md  index.html  privacy.html  support.html
menubar-app/: README.md  package.json
menubar-app/src/: index.html
menubar-app/src-tauri/: Cargo.toml  tauri.conf.json
menubar-app/src-tauri/src/: main.rs
tests/: skill.md  test_coworkguard.py  test_skill_scanner.py
