[package]
name = "coworkguard"
version = "1.0.0"
description = "CoworkGuard — Privacy protection for AI agents"
authors = ["Katherine Holland"]
license = "MIT"
repository = "https://github.com/Katherine-Holland/ClaudeCoworkGuard"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [
  "system-tray",
  "notification-all",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
