[package]
name = "coworkguard"
version = "1.0.0"
description = "CoworkGuard — Privacy protection for AI agents"
authors = ["Katherine Holland"]
license = "MIT"
repository = "https://github.com/Katherine-Holland/ClaudeCoworkGuard"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

[features]
default = []
